--- a/KTest.html
+++ b/KTest.html
@@ -155,8 +155,8 @@
             <a href="/" class="bar">Компании</a>
             <a href="/" class="bar">Стать автором</a>
                 <div class="blok">
-                    <img src="imeige/daun.png" class="icon">
-                    <img src="imeige/noun.png" class="icon">
+                    <img src="img/daun.png" class="icon">
+                    <img src="img/noun.png" class="icon">
                     <a href="/" id="come" class="bootom_W" >Войти</a>
                     <a href="/"id="check" class="bootom_Z">Регистрация</a>
                 </div>
@@ -164,7 +164,7 @@
 </div>
 <div class="more_content">
     <main class="main">
-        <img src="imeige/cat5.jpg">
+        <img src="img/cat5.jpg">
         <p>account</p>
         <p>data</p>
         <h1>Задачи с собиседованний(front-end)</h1>
@@ -179,7 +179,7 @@
             о собеседованиях, начинают ломаться копья.
             Хочу тоже внести свой вклад и поделиться
             накопившейся коллекцией вопросов. Прошу.</p>
-        <img src="imeige/cat5.jpg">
+        <img src="img/cat5.jpg">
     </main>
     <aside class="sidebar">
 
