- fixed fonts - separated navBar - align navBar content on the middle

--- a/KTest.html
+++ b/KTest.html
@@ -1,136 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="style_test">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="Styles.css">
 <head>
     <meta charset="UTF-8">
     <title>KTest</title>
-    <style>
-        :root {
-            font-size: 0.75em;
-        }
-        body{
-            margin:0;
-            padding:0;
-}
-        img{
-            height: 15px;
-        }
-        .header{
-            height: 30px;
-            background:#F2F2F2;
-            border-bottom: 1px solid #ccc;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
 
-        }
-        .top{
-            font-family:'Titillium Web', sans-serif;
-            font-size: 14px;
-        }
-        .top ul {
-            list-style: none;
-            display: flex;
-            flex-direction: row;
-            margin: 0;
-        }
-        .top a{
-            margin: 10px;
-            padding: 10px;
-            text-decoration: none;
-        }
-        .first{
-            color:black;
-        }
-        .else{
-             color: rgba(46, 179, 185, 0.93);
-         }
-        .left_G{
-             color: dimgray;
-         }
-        .left_B{
-            color: blueviolet;
-        }
-        .left_Z{
-            color: #00ac00;
-        }
-        .left_A{
-            color:deepskyblue;
-        }
-        .conteiner {
-            height: 70px;
-            /*background: #64909b;*/
-            /*width: 900px;*/
-            margin: 0 auto;
-            border-bottom: 1px solid #ccc;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-            display: flex;
-            flex-direction: row;
-        }
-        .navtop{
-            /*width: 900px;*/
-            margin: 0 auto;
-            display: inline !important;
-            flex-direction: row;
-        }
-        .navtop a{
-            margin-top: 10px;
-            padding: 15px;
-            text-decoration: none;
-            font-family:'Titillium Web', sans-serif;
-            font-size: 14px;
-
-
-        }
-        #logo{
-            color: black;
-            font-size:50px;
-            font-weight: bolder;
-            margin: auto;
-
-        }
-        .icon{
-            margin: 10px;
-            padding: auto;
-        }
-        .bootom_W{
-             border:1px solid dimgray;
-             border-radius: 2px;
-         }
-        .bootom_Z{
-            background-color: #62a4c6;
-            border:1px solid dimgray;
-            border-radius: 2px;
-        }
-        #check{
-            color: aliceblue;
-            margin-left: 40px;
-            margin-top: 35px;
-        }
-        .more_content{
-            display: block;
-            margin: 0 auto;
-        }
-        .crumbs {
-            display:flex;
-            flex-direction:row;
-            list-style:none;
-
-        }
-        .crumbs a{
-            text-decoration: none;
-            margin: 10px;
-            padding: 10px;
-            color: dimgray;
-            font-family:'Titillium Web', sans-serif;
-        }
-
-    </style>
 </head>
 <body>
 <div class="header">
     <div class="top">
         <ul>
-            <li><a href="/"class="first">Хаб</a></li>
+            <li><a href="/"class="first">Хабр</a></li>
             <li><a href="google.com" class="else">Geectimes</a></li>
             <li><a href="google.com" class="else">Тостер</a></li>
             <li><a href="google.com" class="else">Мой круг</a></li>
@@ -146,15 +26,16 @@
     </div>
 </div>
 
-    <div class="conteiner">
-        <nav class="navtop">
-            <div class="logotype"><a href="/"id="logo">habr</a></div>
+    <div class="container">
+        <nav class="navBar">
+            <div class="logotype"><a href="/" id="logo">habr</a>
             <a href="/" class="bar">Публикации</a>
             <a href="/" class="bar">Новости</a>
             <a href="/" class="bar">Пользователи</a>
             <a href="/" class="bar">Компании</a>
             <a href="/" class="bar">Стать автором</a>
-                <div class="blok">
+            </div>
+                <div class="block">
                     <img src="img/daun.png" class="icon">
                     <img src="img/noun.png" class="icon">
                     <a href="/" id="come" class="bootom_W" >Войти</a>
