-button fix -work with block "more_container"

--- a/KTest.html
+++ b/KTest.html
@@ -10,12 +10,12 @@
 <div class="header">
     <div class="top">
         <ul>
-            <li><a href="/"class="first">Хабр</a></li>
+            <li><a href="/" class="first">Хабр</a></li>
             <li><a href="google.com" class="else">Geectimes</a></li>
             <li><a href="google.com" class="else">Тостер</a></li>
             <li><a href="google.com" class="else">Мой круг</a></li>
             <li><a href="google.com" class="else">Фрипансим</a></li>
-            <ul class="left">
+            <ul  class="left">
                 <li><a href="/" class="left_G">Мегапосты</a></li>
                 <li><a href="/" class="left_B">Миллиарды</a></li>
                 <li><a href="/" class="left_Z">Developer/Tester-квест</a></li>
@@ -36,19 +36,25 @@
             <a href="/" class="bar">Стать автором</a>
             </div>
                 <div class="block">
-                    <img src="img/daun.png" class="icon">
-                    <img src="img/noun.png" class="icon">
-                    <a href="/" id="come" class="bootom_W" >Войти</a>
-                    <a href="/"id="check" class="bootom_Z">Регистрация</a>
+                    <img src="img/daun.png" class="icon" alt="/">
+                    <img src="img/noun.png" class="icon" alt="/">
+                    <form>
+                        <a href="/" id="come" ><input type="button" value="Войти"></a>
+                        <a href="/" id="check"><input type="button" value="Регистрация"></a>
+                    </form>
                 </div>
 </nav>
 </div>
+
+
 <div class="more_content">
     <main class="main">
-        <img src="img/cat5.jpg">
-        <p>account</p>
-        <p>data</p>
-        <h1>Задачи с собиседованний(front-end)</h1>
+        <div class="posts">
+            <img src="img/cat5.jpg" alt="/">
+            <p>Jirniyc@t17</p>
+            <p><date>2019.10.04</date></p>
+            <p><time>в 18:11</time></p></div>
+        <div><h1>Задачи с собиседованний(front-end)</h1></div>
         <ul class="crumbs">
             <li><a href="/">JavaScript,</a></li>
             <li><a href="/">Учебный процес в IT,</a></li>
@@ -59,12 +65,15 @@
             не теряет своей актуальности, а в комментариях, когда речь заходит
             о собеседованиях, начинают ломаться копья.
             Хочу тоже внести свой вклад и поделиться
-            накопившейся коллекцией вопросов. Прошу.</p>
-        <img src="img/cat5.jpg">
+            накопившейся коллекцией вопросов. Прошу.
+          </p>
+        <p>  <b>СОВЕТ:</b>
+            Если сомневаетесь, используйте единицы rem для размера шрифта, px
+            — для границ и единицы em — для большинства других свойств.</p>
+        <img class="picture" src="img/cat5.jpg" alt="/">
     </main>
     <aside class="sidebar">
 
-    </aside>
-</div>
+    </aside></div>
 </body>
 </html>
