-fix date -alignment content -adding sidebar -creation of two blocks

--- a/KTest.html
+++ b/KTest.html
@@ -55,34 +55,61 @@
             <img src="img/cat5.jpg" alt="/" class="avatar">
             <p>Jirniyc@t17</p>
             <p>
-                <date>2019.10.04</date>
+                <date>3 мая 2019</date>
             </p>
             <p>
                 <time>в 18:11</time>
             </p>
         </div>
-        <div><h1>Задачи с собеседованний(front-end)</h1></div>
+        <div class="text"><h1>Задачи с собеседованний(front-end)</h1></div>
         <ul class="crumbs">
             <li><a href="/">JavaScript,</a></li>
             <li><a href="/">Учебный процес в IT,</a></li>
             <li><a href="/">Карьера в IT-индустрии</a></li>
         </ul>
-        <p>Так получилось, что за свою карьеру front-end разработчика,
+        <p class="text" >Так получилось, что за свою карьеру front-end разработчика,
             я побывала на многих собеседованиях. Тема прохождения интервью
             не теряет своей актуальности, а в комментариях, когда речь заходит
             о собеседованиях, начинают ломаться копья.
             Хочу тоже внести свой вклад и поделиться
             накопившейся коллекцией вопросов. Прошу.
         </p>
-        <p><b>СОВЕТ:</b>
+        <p class="text_2"><b>СОВЕТ:</b>
             Если сомневаетесь, используйте единицы rem для размера шрифта, px
             — для границ и единицы em — для большинства других свойств.</p>
         <img class="picture" src="img/cat5.jpg" alt="/">
 
         <aside class="sidebar">
-
-        </aside>
+        <div>
+            <h1>Похожие публикации</h1>
+            <h2>Как исправить ошибки в Google Maps?</h2>
+            <img src="img/eye.png" alt="/">
+            <img src="img/comment.png" alt="/">
+        </div>
+        <div>
+            <h2>Как исправить ошибки в JS?</h2>
+            <img src="img/eye.png" alt="/">
+            <img src="img/comment.png" alt="/">
+        </div>
+        <div>
+            <h2>Анализ конфиденциальности данных в
+                мобильном приложении и на сайте TikTok</h2>
+            <img src="img/eye.png" alt="/">
+            <img src="img/comment.png" alt="/">
+        </div>
+            <div>
+                <h2>Как Программисту 1С стать Java developer'ом</h2>
+                <img src="img/eye.png" alt="/">
+                <img src="img/comment.png" alt="/">
+            </div>
+            <div>
+                <h2>Индексируем миллиарды текстовых векторов</h2>
+                <img src="img/eye.png" alt="/">
+                <img src="img/comment.png" alt="/">
+            </div>
+    </aside>
     </div>
 </main>
+
 </body>
 </html>
