- changed post date - align tags to the left - added margin for some text styles - Separated page on 68% and 25% to made it adaptive

--- a/KTest.html
+++ b/KTest.html
@@ -54,27 +54,22 @@
         <div class="posts">
             <img src="img/cat5.jpg" alt="/" class="avatar">
             <p>Jirniyc@t17</p>
-            <p>
-                <date>3 мая 2019</date>
-            </p>
-            <p>
-                <time>в 18:11</time>
-            </p>
+            <p>3 мая 2019 в 18:11</p>
         </div>
-        <div class="text"><h1>Задачи с собеседованний(front-end)</h1></div>
+        <div><h1>Задачи с собеседованний(front-end)</h1></div>
         <ul class="crumbs">
             <li><a href="/">JavaScript,</a></li>
             <li><a href="/">Учебный процес в IT,</a></li>
             <li><a href="/">Карьера в IT-индустрии</a></li>
         </ul>
-        <p class="text" >Так получилось, что за свою карьеру front-end разработчика,
+        <p class="postContent" >Так получилось, что за свою карьеру front-end разработчика,
             я побывала на многих собеседованиях. Тема прохождения интервью
             не теряет своей актуальности, а в комментариях, когда речь заходит
             о собеседованиях, начинают ломаться копья.
             Хочу тоже внести свой вклад и поделиться
             накопившейся коллекцией вопросов. Прошу.
         </p>
-        <p class="text_2"><b>СОВЕТ:</b>
+        <p class="text_2"><b class="addMargin" >СОВЕТ:</b>
             Если сомневаетесь, используйте единицы rem для размера шрифта, px
             — для границ и единицы em — для большинства других свойств.</p>
         <img class="picture" src="img/cat5.jpg" alt="/">
