-changes img -alignment and adding counter

--- a/KTest.html
+++ b/KTest.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>KTest</title>
-
 </head>
 <header>
     <div class="top">
@@ -53,7 +52,7 @@
 
         <div class="posts">
             <img src="img/cat5.jpg" alt="/" class="avatar">
-            <p>Jirniyc@t17</p>
+            <p class="posts_avatar_color">Jirniyc@t17</p>
             <p>3 мая 2019 в 18:11</p>
         </div>
         <div><h1>Задачи с собеседованний(front-end)</h1></div>
@@ -78,29 +77,39 @@
         <div>
             <h1>Похожие публикации</h1>
             <h2>Как исправить ошибки в Google Maps?</h2>
-            <img src="img/eye.png" alt="/">
+            <div class="pictogram"><img src="img/eye.png" alt="/">
+            <p>14,7k</p>
             <img src="img/comment.png" alt="/">
+            <p>7</p></div>
         </div>
         <div>
             <h2>Как исправить ошибки в JS?</h2>
-            <img src="img/eye.png" alt="/">
-            <img src="img/comment.png" alt="/">
+            <div class="pictogram"><img src="img/eye.png" alt="/">
+                <p>5,7k</p>
+                <img src="img/comment.png" alt="/">
+                <p>30</p></div>
         </div>
         <div>
             <h2>Анализ конфиденциальности данных в
                 мобильном приложении и на сайте TikTok</h2>
-            <img src="img/eye.png" alt="/">
-            <img src="img/comment.png" alt="/">
+            <div class="pictogram"><img src="img/eye.png" alt="/">
+                <p>17</p>
+                <img src="img/comment.png" alt="/">
+                <p>4</p></div>
         </div>
             <div>
                 <h2>Как Программисту 1С стать Java developer'ом</h2>
-                <img src="img/eye.png" alt="/">
-                <img src="img/comment.png" alt="/">
+                <div class="pictogram"><img src="img/eye.png" alt="/">
+                    <p>147</p>
+                    <img src="img/comment.png" alt="/">
+                    <p>40</p></div>
             </div>
             <div>
                 <h2>Индексируем миллиарды текстовых векторов</h2>
-                <img src="img/eye.png" alt="/">
-                <img src="img/comment.png" alt="/">
+                <div class="pictogram"><img src="img/eye.png" alt="/">
+                    <p>200</p>
+                    <img src="img/comment.png" alt="/">
+                    <p>1</p></div>
             </div>
     </aside>
     </div>
