- Evgeniy Code review

--- a/KTest.html
+++ b/KTest.html
@@ -40,7 +40,7 @@
             <img src="img/daun.png" class="icon" alt="/">
             <img src="img/noun.png" class="icon" alt="/">
             <form>
-                <a href="/" id="come"><input type="button" value="Войти"></a>
+                <a href="/" id="come"><input type="button" value="Войти"></a> <!--лучше использовать button type button-->
                 <a href="/" id="check"><input type="button" value="Регистрация"></a>
             </form>
         </div>
